# d2vg

./: .gitignore  LICENSE  README-pypi.md  README.ja_JP.md  README.md  README.md.ja_JP  d2vg.py  d2vg_server.py  expand_ja_stackoverflow_com_posts.py  fastapi-test.py  installation-on-windows.md  installation-on-windows.md.ja_JP  jawiki-doc2vec-test.py  memo.md  model_loaders.py  parsers.py  requirements.txt  setup.cfg
.github/workflows/: tests.yaml
d2vg/: __init__.py  cli.py  config.py  d2vg.py  d2vg_setup_model.py  do_incremental_search.py  do_index_management.py  do_index_search.py  downloader.py  embedding_utils.py  esesion.py  file_opener.py  fnmatcher.py  index_db.py  iter_funcs.py  main.py  model_loader.py  model_loaders.py  parsers.py  processpoolexecutor_wrapper.py  raw_db.py  search_result.py  system_wide_flag.py  types.py  vec.py
d2vg/init_attrs_with_kwargs/: __init__.py
d2vg/models/sentence-bert-japanese-model/: ja.model.toml
docs/: installation-on-ubuntu.ja_JP.md  installation-on-ubuntu.md  installation-on-windows.ja_JP.md  installation-on-windows.md  usage-indexing.ja_JP.md  usage-indexing.md
making_doc2vec_model/: doc_sampling.py  how_to_make_chinese_doc2vec_model_from_zhwiki_data.md  how_to_make_english_doc2vec_model_from_enwiki_data.md  how_to_make_japanese_doc2vec_model_from_jawiki_data.ja_JP.md  how_to_make_japanese_doc2vec_model_from_jawiki_data.md.ja_JP  how_to_make_korean_doc2vec_model_from_kowiki_data.md  remove_doc_and_file_tags.py  train.py  trim_docs.py  trim_vocab_and_docs.py  trim_vocab_to_size.py
tests/: test_cli.py  test_d2vg_functions.py  test_embedding_utils.py  test_index_db.py  test_iter_funcs.py  test_model_loader.py  test_parsers.py  test_raw_db.py  test_search_result.py
