[metadata]
name = d2vg
version = 0.5.2
description = A Doc2Vec grep
url = https://github.com/tos-kamiya/d2vg
author = Toshihiro kamiya
author_email = kamiya@mbj.nifty.com
license = BSD 2-Clause License

[options]
packages = find:
install_requires = 
    docopt
    beautifulsoup4
    gensim
    pdfminer.six
    chardet
    docx2txt
    appdirs

[options.entry_points]
console_scripts = d2vg = d2vg:main

# [options.package_data]
# d2vg = models/*.*
