[metadata]
name = d2vg
version = 0.5.4
description = A Doc2Vec grep
url = https://github.com/tos-kamiya/d2vg
author = Toshihiro kamiya
author_email = kamiya@mbj.nifty.com
license = BSD 2-Clause License
classifiers =
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: BSD License
    Operating System :: POSIX :: Linux
    Operating System :: Microsoft :: Windows :: Windows 10

[options]
packages = find:
install_requires = 
    docopt
    beautifulsoup4
    gensim
    pdfminer.six
    chardet
    docx2txt
    appdirs
python_requires = >= 3.8

[options.entry_points]
console_scripts = d2vg = d2vg:main

# [options.extras_require]  # pip3 install -e .[test]
# test =
#     borb

# [options.package_data]
# d2vg = models/*.*

[tox:tox]
envlist = py38, py39

[gh-actions]
python =
    3.8: py38
    3.9: py39

[testenv]
deps =
    borb
commands =
    python -m unittest discover
