[metadata]
name = d2vg
version = 1.0.0
description = A Doc2Vec grep
long_description = file: README-pypi.md
long_description_content_type = text/markdown
url = https://github.com/tos-kamiya/d2vg
author = Toshihiro kamiya
author_email = kamiya@mbj.nifty.com
license = BSD 2-Clause License
classifiers =
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: BSD License
    Operating System :: POSIX :: Linux
    Operating System :: Microsoft :: Windows :: Windows 10

[options]
packages = find:
install_requires = 
    docopt
    beautifulsoup4
    gensim
    pdftotext ; platform_system != "Windows" 
    chardet
    docx2txt
    appdirs
    psutil
python_requires = >= 3.8

[options.entry_points]
console_scripts = 
    d2vg = d2vg:main
    d2vg-setup-model = d2vg:setup_model_main

[options.extras_require]
ko =
    tweepy==3.7  # the latest ver (4) is incompatible with konlpy
    konlpy
zh =
    jieba
ja =
    janome

# [options.extras_require]  # pip3 install -e .[test]
# test =
#     borb

# [options.package_data]
# d2vg = models/*.*

[tox:tox]
envlist = py38, py39

[gh-actions]
python =
    3.8: py38
    3.9: py39

[testenv]
deps =
    borb
commands =
    python -m unittest discover
